--- a/src/AppBundle/Resources/public/less/common.less
+++ b/src/AppBundle/Resources/public/less/common.less
@@ -85,7 +85,7 @@ a:hover, a:focus{
 //}
 h1.blue-text{
     font-size: 22px;
-    //text-transform: uppercase;
+    color: #333;
     font-family: 'HelveticaNeue-Light';
 }
 
