--- a/src/AppBundle/Resources/views/Info/standards.html.twig
+++ b/src/AppBundle/Resources/views/Info/standards.html.twig
@@ -71,7 +71,7 @@
             });
         </script>
     {% else %}
-        <h1>{{ standart.title | raw }}</h1>
+        <h1 class="blue-text">{{ standart.title | raw }}</h1>
         <br/>
         {{ standart.body | raw }}
     {% endif %}
