--- a/src/AppBundle/Resources/public/less/common.less
+++ b/src/AppBundle/Resources/public/less/common.less
@@ -697,3 +697,20 @@ nav .navbar-nav li.active a:hover{
 .pagination > li > a:hover, .pagination > li > span:hover, .pagination > li > a:focus, .pagination > li > span:focus{
     color: #fc113c;
 }
+
+.publication-title a{
+    color: #222;
+    font-weight: bold;
+}
+.publication-footerline{
+    //background: #F5F5F5;
+    //padding: 10px;
+}
+.publication-share, .publication-date, .publication-comment{
+    font-size: 13px;
+    color: #333;
+}
+.publication-share:hover, .publication-comment:hover{
+    cursor: pointer;
+    text-decoration: underline;
+}
