--- a/src/AppBundle/Resources/views/Publication/news.html.twig
+++ b/src/AppBundle/Resources/views/Publication/news.html.twig
@@ -13,30 +13,7 @@
                 <div class="title text-uppercase"><div>НОВОСТИ МЕДИЦИНЫ</div></div>
                 <div style="padding-left: 50px">
                     {% for n in news %}
-                        {% if n.preview.path is defined %}
-                            <div class="new-item row">
-                                <div class="col-xs-3">
-                                    <img src="{{ n.preview.path }}" class="img-thumbnail">
-                                </div>
-                                <div class="col-xs-9">
-                                    <div class="new-title">
-                                        <a href="{{ path('publications',{'url' : n.id }) }}">{{ n.title }}</a>
-                                    </div>
-                                    <div class="new-body">{{ n.anons }}</div>
-                                    <span class="new-date">{{ n.created | date('d.m.Y') }}</span>
-                                </div>
-                            </div>
-                        {% else %}
-                            <div class="new-item row">
-                                <div class="col-xs-12">
-                                    <div class="new-title">
-                                        <a href="{{ path('publications',{'url' : n.id }) }}">{{ n.title }}</a>
-                                    </div>
-                                    <div class="new-body">{{ n.anons }}</div>
-                                    <span class="new-date">{{ n.created | date('d.m.Y') }}</span>
-                                </div>
-                            </div>
-                        {% endif %}
+                        {{ include('@App/Publication/publication.item.html.twig',{'publication' : n}) }}
                     {% endfor %}
                     <nav>
                         {{ knp_pagination_render(news) }}
