--- a/src/AppBundle/Resources/public/less/common.css
+++ b/src/AppBundle/Resources/public/less/common.css
@@ -665,3 +665,18 @@ nav .navbar-nav li.active a:hover {
 .pagination > li > span:focus {
   color: #fc113c;
 }
+.publication-title a {
+  color: #222;
+  font-weight: bold;
+}
+.publication-share,
+.publication-date,
+.publication-comment {
+  font-size: 13px;
+  color: #333;
+}
+.publication-share:hover,
+.publication-comment:hover {
+  cursor: pointer;
+  text-decoration: underline;
+}
