--- a/src/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/AppBundle/Resources/views/Default/index.html.twig
@@ -34,33 +34,9 @@
         <div class="col-sm-12">
             <div class="title"><div><a href="{{ path('news') }}">НОВОСТИ</a></div></div>
             {% for p in publications %}
-                <div class="index-item row">
-                    {% if p.preview.path is defined %}
-                        <div class="col-xs-3" style="padding-right: 0">
-                            <img src="{{ p.preview.path }}" class="img-thumbnail" title="{{ p.title }}"  alt="{{ p.title }}">
-                        </div>
-                        <div class="col-xs-9">
-                            <div class="item-title"><a href="{{ path('publications',{'url' : p.id }) }}" style="color: #222">{{ p.title }}</a></div>
-                            <div class="item-anons">
-                                {{ p.anons }}
-                            </div>
-                            <div class="item-param">
-                                {{ p.created | date('d.m.Y') }}
-                            </div>
-                        </div>
-                    {% else %}
-                    <div class="col-xs-12">
-                        <div class="item-title"><a href="{{ path('publications',{'url' : p.id }) }}" style="color: #222">{{ p.title }}</a></div>
-                        <div class="item-anons">
-                            {{ p.anons }}
-                        </div>
-                        <div class="item-param">
-                            {{ p.created | date('d.m.Y') }}
-                        </div>
-                    </div>
-                        {% endif %}
-                </div>
+                {{ include('@App/Publication/publication.item.html.twig',{'publication' : p }) }}
             {% endfor %}
+            <br />
             <div class="text-left">
                 <a href="{{ path('news') }}"><b>Читать все новости медицины</b></a>
             </div>
