--- a/src/AdminBundle/Resources/views/Publication/add.html.twig
+++ b/src/AdminBundle/Resources/views/Publication/add.html.twig
@@ -10,6 +10,7 @@
 
 {% block content %}
     <div class="well">
+        {{ form_start(form) }}
         <div class="form-group">
             <label class="col-sm-4 control-label required">Выберите файл</label>
             <div class="col-sm-8">
@@ -18,7 +19,7 @@
                     <br />
                     <br />
                     <div class="fileDoc">
-                        <img src="" brightness="0" contrast="0">
+                        <img src="" brightness="0" contrast="0" style="max-width: 100%;">
                     </div>
                     <div class="navigateFile">
                         <button type="button" class="btn -btn-default rotateLeft"><span class="glyphicon glyphicon-chevron-left"></span></button>
@@ -34,7 +35,6 @@
                 </div>
             </div>
         </div>
-        {{ form_start(form) }}
         {{ form_widget(form) }}
         {{ form_end(form) }}
     </div>
