--- a/src/AppBundle/Resources/views/menu.html.twig
+++ b/src/AppBundle/Resources/views/menu.html.twig
@@ -38,7 +38,7 @@
                     <ul class="submenu-items">
                         <li><a href="{{ path('federal-standards') }}">Федеральные стандарты</a></li>
                         <li><a href="{{ path('abbreviations') }}">Медицинские сокращения</a></li>
-                        <li><a href="#">Калькуляторы</a></li>
+                        <li><a href="{{ path('calculators') }}">Калькуляторы</a></li>
                     </ul>
                 </div>
             </li>
