--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -124,7 +124,7 @@
             <div class="table-cell col-fixed-240 hidden-xs">
                 <div class="text-left">
                     {{ render(controller("AppBundle:Widget:importants" )) }}
-                    {{ render(controller("AppBundle:Widget:banner" )) }}
+                    {#{{ render(controller("AppBundle:Widget:banner" )) }}#}
                 </div>
             </div>
         </div>
