--- a/src/AdminBundle/Resources/views/Publication/edit.html.twig
+++ b/src/AdminBundle/Resources/views/Publication/edit.html.twig
@@ -20,7 +20,7 @@
             <label class="col-sm-4 control-label required">Выберите файл</label>
             <div class="col-sm-8">
                 <div class="file-container">
-                    <input type="file" name="ImageFile" id="ImageFile" class="fileAjax" {{ edit is not defined ? 'required' : '' }} >
+                    <input type="file" name="ImageFile" id="ImageFile" class="fileAjax" >
                     <br />
                     <br />
                     <div class="fileDoc">
