--- a/src/AppBundle/Resources/public/less/common.css
+++ b/src/AppBundle/Resources/public/less/common.css
@@ -578,14 +578,14 @@ th.picker-switch {
 }
 .event-carusel .item {
   float: left;
-  width: 25%;
+  width: 20%;
 }
 .event-carusel .item div {
   padding: 0 5px;
-  text-align: right;
+  text-align: left;
 }
 .event-carusel .item div img {
-  width: 90%;
+  margin-left: 40px;
   height: 135px;
   -webkit-filter: grayscale(100%);
   filter: grayscale(100%);
