--- a/src/AppBundle/Resources/public/less/common.less
+++ b/src/AppBundle/Resources/public/less/common.less
@@ -619,12 +619,13 @@ th.prev, th.next, th.picker-switch{
     overflow: hidden;
     .item{
         float: left;
-        width: 25%;
+        width: 20%;
         div{
             padding: 0 5px;
-            text-align: right;
+            text-align: left;
             img{
-                width: 90%;
+                //width: 90%;
+                margin-left: 40px;
                 height: 135px;
                 -webkit-filter: grayscale(100%);
                 filter: grayscale(100%);
