--- a/src/AppBundle/Resources/views/Default/feedback.html.twig
+++ b/src/AppBundle/Resources/views/Default/feedback.html.twig
@@ -4,31 +4,34 @@
     <div class="title"><div>Связь с администрацией сайта</div></div>
     <br />
     <br />
+    {% if post == true %}
+        <div class="alert alert-success">Ваше сообщение отправлено</div>
+    {% endif %}
     <div class="row">
         <div class="col-md-offset-2 col-md-8">
             <form class="form-horizontal" role="form">
                 <div class="form-group">
                     <label class="col-sm-3 control-label">Ваше имя</label>
                     <div class="col-sm-9">
-                        <input class="form-control" type="text" value="">
+                        <input class="form-control" type="text" value="" name="name">
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="col-sm-3 control-label">Ваш email</label>
                     <div class="col-sm-9">
-                        <input class="form-control" type="text" value="">
+                        <input class="form-control" type="text" value="" name="email">
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="col-sm-3 control-label">Ваш телефон</label>
                     <div class="col-sm-9">
-                        <input class="form-control" type="text" value="">
+                        <input class="form-control" type="text" value="" name="phone">
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="col-sm-3 control-label">Тип обращения</label>
                     <div class="col-sm-9">
-                        <select class="form-control">
+                        <select class="form-control" name="type">
                             <option value="Добавление мероприятия">Добавление мероприятия</option>
                             <option value="Сотрудничество">Сотрудничество</option>
                             <option value="Техническая поддержка">Техническая поддержка</option>
@@ -38,7 +41,7 @@
                 <div class="form-group">
                     <label class="col-sm-3 control-label">Сообщение</label>
                     <div class="col-sm-9">
-                        <textarea class="form-control"></textarea>
+                        <textarea class="form-control" name="text"></textarea>
                     </div>
                 </div>
                 <div class="form-group">
