add default SEO + add seo in event page

--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -68,7 +68,10 @@
 
     {% endblock %}
 
-    {% block seo %}{% endblock %}
+    {% block seo %}
+        <title>Алманах медицинских событий | medalmanah.ru</title>
+        <meta name="description" content="Все медицинские события, курсы, повышения квалификации в одном месте"/>
+    {% endblock %}
 </head>
 <body>
 <div class="body">
