add default SEO + add seo in event page

--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -69,7 +69,7 @@
     {% endblock %}
 
     {% block seo %}
-        <title>Алманах медицинских событий | medalmanah.ru</title>
+        <title>Альманах медицинских событий | medalmanah.ru</title>
         <meta name="description" content="Все медицинские события, курсы, повышения квалификации в одном месте"/>
     {% endblock %}
 </head>
