--- a/src/AppBundle/Resources/views/Publication/comments.html.twig
+++ b/src/AppBundle/Resources/views/Publication/comments.html.twig
@@ -1,4 +1,4 @@
-<div class="block-comments">
+<div class="block-comments" id="comment">
     <div class="detailBox">
         <div class="titleBox">
             <label>Комментарии пользователей</label>
