--- a/src/AppBundle/Resources/views/Publication/eventList.html.twig
+++ b/src/AppBundle/Resources/views/Publication/eventList.html.twig
@@ -32,24 +32,23 @@
     <div class="col-sm-12">
         <div class="title"><div>{{ category }}</div></div>
         <div class="filter">
-            <form class="form">
+            <form class="form-vertical">
                 <div class="row">
-
-                    <div class="form-group col-sm-6">
+                    <div class="form-group col-sm-12">
                         {{ form_widget(form.search) }}
-                    </div>
-                    <div class="form-group col-sm-6">
-                        {{ form_widget(form.specialty) }}
                     </div>
                 </div>
                 <div class="row">
-                    <div class="form-group col-sm-3">
+                    <div class="form-group col-sm-5">
+                        {{ form_widget(form.specialty) }}
+                    </div>
+                    <div class="form-group col-sm-2 text-right">
                         {{ form_widget(form.start) }}
                     </div>
-                    <div class="form-group col-sm-3">
+                    <div class="form-group col-sm-2 text-right">
                         {{ form_widget(form.end) }}
                     </div>
-                    <div class="form-group  col-sm-6">
+                    <div class="form-group  col-sm-3 text-right">
                         {{ form_widget(form.submit) }}
                         {#<a href="{{ path('event_add') }}" style="padding-left: 35px;">Добавить событие</a>#}
                     </div>
